# paradise_circus

./: .bumpversion.cfg  .cruft.json  CITATION.cff  README.md  setup.cfg  tox.ini
.github/: CONTRIBUTING.md
.github/workflows/: tests.yml
docs/source/: cli.rst  conf.py  index.rst  installation.rst  usage.rst
src/paradise_circus/: __init__.py  __main__.py  api.py  cli.py  version.py
src/paradise_circus/mi/: mi.py
tests/: __init__.py  test_version.py
