##########################
# Setup.py Configuration #
##########################
[metadata]
name = paradise_circus
version = 0.0.3-dev
description = It's a circus in paradise.
long_description = file: README.md
long_description_content_type = text/markdown

# URLs associated with the project
url = https://github.com/sslakkimsetty/paradise_circus
download_url = https://github.com/sslakkimsetty/paradise_circus/releases
project_urls =
    Tracker = https://github.com/sslakkimsetty/paradise_circus/issues
    Source = https://github.com/sslakkimsetty/paradise_circus
    Documentation = https://paradise_circus.readthedocs.io

# Author information
author = Sai Srikanth Lakkimsetty
author_email = saislakkimsetty@gmail.com
maintainer = Sai Srikanth Lakkimsetty
maintainer_email = saislakkimsetty@gmail.com

# License Information
license = MIT
license_files =
    LICENSE

# Search tags
classifiers =
    Development Status :: 1 - Planning
    Environment :: Console
    Intended Audience :: Developers
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Framework :: Pytest
    Framework :: tox
    Framework :: Sphinx
    Programming Language :: Python
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Programming Language :: Python :: 3.12
    Programming Language :: Python :: 3 :: Only
    # TODO add your topics from the Trove controlled vocabulary (see https://pypi.org/classifiers)
keywords =
    snekpack
    cookiecutter
    mass spectrometry imaging
    histology
    coregistration
    registration
    mass spec imaging
    imaging mass spec
    H&E image

[options]
install_requires =
    # Missing itertools from the standard library you didn't know you needed
    more_itertools
    # Use progress bars excessively
    tqdm
    # Command line tools
    click
    more_click
;    matplotlib==3.6.3
;    numpy==1.24.2
;    tensorflow==2.13.0
;    keras==2.13.1

# Random options
zip_safe = false
include_package_data = True
python_requires = >=3.8

# Where is my code
packages = find:
package_dir =
    = src

[options.packages.find]
where = src

[options.extras_require]
tests =
    pytest
    coverage
docs =
    sphinx
    sphinx-rtd-theme
    sphinx-click
    sphinx_automodapi
    # Remove if your project doesn't use Pydantic
    autodoc_pydantic
    # To include LaTeX comments easily in your docs. 
    # If you uncomment this, don't forget to do the same in docs/conf.py
    # texext


[options.entry_points]
console_scripts =
    paradise_circus = paradise_circus.cli:main


######################
# Doc8 Configuration #
# (doc8.ini)         #
######################
[doc8]
max-line-length = 120

##########################
# Coverage Configuration #
# (.coveragerc)          #
##########################
[coverage:run]
branch = True
source = paradise_circus
omit =
    tests/*
    docs/*

[coverage:paths]
source =
    src/paradise_circus
    .tox/*/lib/python*/site-packages/paradise_circus

[coverage:report]
show_missing = True
exclude_lines =
    pragma: no cover
    raise NotImplementedError
    if __name__ == "__main__":
    if TYPE_CHECKING:
    def __str__
    def __repr__

##########################
# Darglint Configuration #
##########################
[darglint]
docstring_style = sphinx
strictness = short

[darglint2]
docstring_style = sphinx
strictness = short

#######################
# MyPy Configuration  #
#######################
[mypy]
plugins = pydantic.mypy

#########################
# Flake8 Configuration  #
# (.flake8)             #
#########################
[flake8]
exclude =
    .tox,
    .git,
    __pycache__,
    docs/source/conf.py,
    build,
    dist,
    tests/fixtures/*,
    *.pyc,
    *.egg-info,
    .cache,
    .eggs,
    data
max-line-length = 120
max-complexity = 20
import-order-style = pycharm
application-import-names =
    paradise_circus
    tests
